Fix favorite star in prioritylist contextmenu option being misaligned

--- a/src/providers/ContextMenuProvider/ContextMenu.scss
+++ b/src/providers/ContextMenuProvider/ContextMenu.scss
@@ -14,6 +14,7 @@
       gap: .5ch;
       padding: 1ch;
       cursor: pointer;
+      align-items: flex-end;
 
       &:hover {
         background-color: var(--background-secondary);
